--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,92 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+header {
+  text-align: center;
+  font-family: "Gill Sans";
+  background-color: #b3cfdd;
+  margin-left: 7%;
+  margin-right: 7%;
+}
+
+header h1 {
+  font-size: 4rem;
+}
+
+#container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+#container #song-info {
+  padding: 1%;
+  width: 40%;
+}
+
+#container #song-info #album-art {
+  position: relative;
+}
+
+#container #song-info #album-art #album-title {
+  background-color: #b3cfdd;
+  text-transform: uppercase;
+  text-align: center;
+  color: white;
+  text-shadow: -3px 5px 0 black;
+  width: 100%;
+  font-family: "Gill Sans";
+  letter-spacing: 0.75rem;
+  font-size: 3rem;
+  font-weight: 600;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+#container #song-info #album-art img {
+  width: 100%;
+}
+
+#container #song-info #song-list {
+  text-align: center;
+  background-color: #b3cfdd;
+}
+
+#container #song-info #song-list .song {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  padding: 1.5rem;
+  font-size: 1.5rem;
+  -webkit-transition: 0.2s ease;
+  transition: 0.2s ease;
+}
+
+#container #song-info #song-list .song:hover {
+  letter-spacing: 0.2rem;
+  font-style: italic;
+}
+
+#container #clicked-container {
+  margin: 1%;
+  text-align: center;
+  width: 40%;
+  position: relative;
+  background-color: #b3cfdd;
+}
+
+#container #clicked-container #clicked-song {
+  font-family: cursive;
+  top: 40%;
+  position: -webkit-sticky;
+  position: sticky;
+  font-size: 2rem;
+}
+
+#container #clicked-container #spotify {
+  top: 50%;
+  position: -webkit-sticky;
+  position: sticky;
+}
+/*# sourceMappingURL=style.css.map */
